Primeiros passos! muita coisa pela frente!!

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -82,6 +82,8 @@
 	<div th:text="${publicador.nome}"></div>
 	<label>Numero De Publicações: </label>
 	<div th:text="${publicador.nPublicacoes}"></div>
+	<label>Stauts: </label>
+	<div th:text="${publicador.Status}"></div>
 
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
 		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
