--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -19,7 +19,7 @@
 		<div class="d-flex justify-content-center h-100">
 			<div class="card">
 				<div class="card-header">
-					<h3>Cadastro</h3>
+					<h3>Login</h3>
 					<div class="d-flex justify-content-end social_icon">
 						<span><i class="fab fa-facebook-square"></i></span> <span><i
 							class="fab fa-google-plus-square"></i></span> <span><i
@@ -27,12 +27,12 @@
 					</div>
 				</div>
 				<div class="card-body">
-					<form>
+					<form method="post" action="#" th:action="@{/acesso/logar}">
 						<div class="input-group form-group">
 							<div class="input-group-prepend">
 								<span class="input-group-text"><i class="fas fa-user"></i></span>
 							</div>
-							<input type="text" class="form-control" placeholder="username">
+							<input type="text" class="form-control" placeholder="Digite seu Email" th:name="email">
 
 						</div>
 						<div class="input-group form-group">
@@ -40,13 +40,13 @@
 								<span class="input-group-text"><i class="fas fa-key"></i></span>
 							</div>
 							<input type="password" class="form-control"
-								placeholder="password">
+								placeholder="Digite sua Senha" th:name="senha">
 						</div>
 						<div class="row align-items-center remember">
 							<input type="checkbox">Lembrar-me
 						</div>
 						<div class="form-group">
-							<input type="submit" value="Login"
+							<input type="submit" value="login"
 								class="btn float-right login_btn">
 						</div>
 					</form>
