--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -15,6 +15,7 @@
 <link rel="stylesheet" th:href="@{/css/login.css}" />
 </head>
 <body>
+	<header th:replace="fragments/header :: cabecalho"></header>
 	<div class="container">
 		<div class="d-flex justify-content-center h-100">
 			<div class="card">
@@ -32,7 +33,8 @@
 							<div class="input-group-prepend">
 								<span class="input-group-text"><i class="fas fa-user"></i></span>
 							</div>
-							<input type="text" class="form-control" placeholder="Digite seu Email" th:name="email">
+							<input type="text" class="form-control"
+								placeholder="Digite seu Email" th:name="email">
 
 						</div>
 						<div class="input-group form-group">
