Inserido Iframe na página de relatório principal e criado script para substituir conteúdo do relatório de publicações

--- a/src/main/resources/templates/relatorios/relatorioQtdInscritos.html
+++ b/src/main/resources/templates/relatorios/relatorioQtdInscritos.html
@@ -5,9 +5,7 @@
 <meta charset="ISO-8859-1">
 <title>Relatório Inscritos</title>
 <style type="text/css">
-	 width: 100%;
-  	 height: 300px;
- 	 background-image: linear-gradient(to top, #30cfd0 0%, #330867 100%);
+	 background-img = "C:\Users\evers\git\CasaDoProgramador\src\main\resources\static\img_relatorios\img_fundo_relatoriosIncritos.jpg";
 </style>
 
 </head>
