--- a/src/main/resources/templates/relatorios/relatorios.html
+++ b/src/main/resources/templates/relatorios/relatorios.html
@@ -354,20 +354,20 @@
                 <br>
                 
                 
+                
+                
+                
                 <div class="section-content">
                     <div class="tabs-content">
                         <div class="wrapper">
                             <ul class="tabs clearfix" data-tabgroup="first-tab-group">
-                              <li><a href="#tab1" class="active" > <span id="mes">July 2018 </span> </a></li>
-                              <li><a href="#tab2">June 2018</a></li>
-                              <li><a href="#tab3">May 2018</a></li>
-                              <li><a href="#tab4">April 2018</a></li>
+                              <li><a href="#tab1" class="active" > <span id="mes1">July 2018 </span> </a></li>
+                              <li><a href="#tab2"> <span id="mes2">Juny 2018 </span></a></li>
+                              <li><a href="#tab3"> <span id="mes3"> May 2018 </span></a></li>
+                              <li><a href="#tab4"><span id="mes4">April 2018 </span></a></li>
                             </ul>
-                            
-                            
-                            
-                            
-                            
+                     
+                                        
                             <section id="first-tab-group" class="tabgroup">
                                 <div id="tab1">
                                     <ul>
@@ -616,10 +616,20 @@
     </script>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js" type="text/javascript"></script>
 	
+	
+	
 	<script type="text/javascript">
-		var mes     = document.getElementById("mes").innerHTML = "November 2019";
-		alert('mes atual é :' + mes );
-		document.getElementById("mes").style.color="#f00";
+		var mes = new Date;
+		var number = 1;
+		var mesAtual = mes.getMonth() + number;  
+		var umMesAtras = mesAtual - number; 
+		var doisMesesAtras = umMesAtras - number;
+		var tresMesestras = doisMesesAtras - number ;
+				
+		document.getElementById("mes1").innerHTML = mesAtual + " / " + mes.getFullYear();
+		document.getElementById("mes2").innerHTML = umMesAtras + " / " + mes.getFullYear();
+		document.getElementById("mes3").innerHTML = doisMesesAtras + " / " + mes.getFullYear();
+		document.getElementById("mes4").innerHTML = tresMesestras + " / " + mes.getFullYear();
 	</script>
 
 </body>
