Criacao do editor de texto

--- a/src/main/resources/templates/cadastro/cadastroInscrito.html
+++ b/src/main/resources/templates/cadastro/cadastroInscrito.html
@@ -133,7 +133,7 @@
 					</div>
 					<br>
 					<p class="text-center">
-						Já tem uma conta? <a href="./login">Logue aqui!</a>
+						Já tem uma conta? <a th:href="@{/acesso/login}" href="#">Logue aqui!</a>
 					</p>
 				</form>
 			</article>
