--- a/src/main/resources/templates/mostraInscrito.html
+++ b/src/main/resources/templates/mostraInscrito.html
@@ -26,7 +26,7 @@
 					<th>cpf</th>
 					<th>email</th>
 					<th>Status</th>
-					<th>nPublicacoes</th>
+					<th>Nickname</th>
 				<tr>
 			</thead>
 			<tbody>
