Atualizado relatório de publicador e os gráficos

--- a/src/main/resources/templates/relatorios/relatorios.html
+++ b/src/main/resources/templates/relatorios/relatorios.html
@@ -299,7 +299,7 @@
                 
                 
 			<div class="embed-responsive embed-responsive-4by3">
-				<iframe src="http://localhost:8080/relatorio/relatorioAssunto"></iframe>
+				<iframe width="200px" height="200px"src="http://localhost:8080/relatorio/relatorioAssunto" allowfullscreen ></iframe>
 			</div>
 
 			<div class="section-content">
@@ -339,7 +339,7 @@
            
            
 		<div class="embed-responsive embed-responsive-4by3">
-			<iframe src="http://localhost:8080/relatorio/relatorioUsuario"></iframe>
+			<iframe src="http://localhost:8080/relatorio/relatorioUsuario" allowfullscreen></iframe>
 		</div>
 	
            
