--- a/src/main/resources/templates/relatorios/relatorioAssunto.html
+++ b/src/main/resources/templates/relatorios/relatorioAssunto.html
@@ -3,8 +3,18 @@
 <head>
 <meta charset="ISO-8859-1">
 <title>Relatório de Assuntos</title>
+
+<style type="text/css">
+	#myChart{
+	background-image: url("/img_relatorios/fundo_relatorio_assunto.jpg");
+	border:8px solid #1B1B1B;
+		}
+
+</style>
+
+
 </head>
-<body>
+<body >
 	
 	<canvas id="myChart" width="200" height="100"></canvas>
 	<script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.2/dist/Chart.min.js"></script>
@@ -37,12 +47,12 @@
 							label : '# of Votes',
 							data : [ valor1, valor2, valor3, valor4, valor5, valor6 ],
 							backgroundColor : [ 
-									'rgba(255, 99, 132, 0.2)',
-									'rgba(54, 162, 235, 0.2)',
-									'rgba(255, 206, 86, 0.2)',
-									'rgba(75, 192, 192, 0.2)',
-									'rgba(153, 102, 255, 0.2)',
-									'rgba(255, 159, 64, 0.2)' ],
+									'rgba(255, 99, 132, 1.0)',
+									'rgba(54, 162, 235, 1.0)',
+									'rgba(255, 206, 86, 1.0)',
+									'rgba(75, 192, 192, 1.0)',
+									'rgba(153, 102, 255, 1.0)',
+									'rgba(255, 159, 64, 1.0)' ],
 							borderColor : [ 
 									'rgba(255, 99, 132, 1)',
 									'rgba(54, 162, 235, 1)',
