--- a/src/main/resources/templates/relatorios/relatorioQtdInscritos.html
+++ b/src/main/resources/templates/relatorios/relatorioQtdInscritos.html
@@ -5,8 +5,14 @@
 <meta charset="ISO-8859-1">
 <title>Relatório Inscritos</title>
 <style type="text/css">
-	 background-img = "C:\Users\evers\git\CasaDoProgramador\src\main\resources\static\img_relatorios\img_fundo_relatoriosIncritos.jpg";
+	#myChart{
+	background-image: url("/img_relatorios/fundo_relatorio.jpg");
+	border:8px solid #1B1B1B;
+	
+		}
+
 </style>
+
 
 </head>
 <body >
@@ -30,9 +36,9 @@
 		    	 datasets: [{
 		    	        data: [10, 20, 30],
 		    	        backgroundColor : [ 
-							'rgba(255, 99, 132, 0.2)',
-							'rgba(54, 162, 235, 0.2)',
-							'rgba(255, 206, 86, 0.2)',],
+							'rgba(255, 99, 132, 1.0)',
+							'rgba(54, 162, 235, 1.0)',
+							'rgba(255, 206, 86, 1.0)',],
 							borderColor : [ 
 								'rgba(255, 99, 132, 1)',
 								'rgba(54, 162, 235, 1)',
