--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,82 +9,7 @@
 	crossorigin="anonymous">
 </head>
 <body>
-	<h1>SE FUDEO!!</h1>
-	<nav class="navbar navbar-expand-lg navbar-light bg-light">
-		<a class="navbar-brand" href="#">Navbar</a>
-		<button class="navbar-toggler" type="button" data-toggle="collapse"
-			data-target="#conteudoNavbarSuportado"
-			aria-controls="conteudoNavbarSuportado" aria-expanded="false"
-			aria-label="Alterna navegação">
-			<span class="navbar-toggler-icon"></span>
-		</button>
-
-		<div class="collapse navbar-collapse" id="conteudoNavbarSuportado">
-			<ul class="navbar-nav mr-auto">
-				<li class="nav-item active"><a class="nav-link" href="#">Home
-						<span class="sr-only">(página atual)</span>
-				</a></li>
-				<li class="nav-item"><a class="nav-link" href="#">Link</a></li>
-				<li class="nav-item dropdown"><a
-					class="nav-link dropdown-toggle" href="#" id="navbarDropdown"
-					role="button" data-toggle="dropdown" aria-haspopup="true"
-					aria-expanded="false"> Dropdown </a>
-					<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-						<a class="dropdown-item" href="#">Ação</a> <a
-							class="dropdown-item" href="#">Outra ação</a>
-						<div class="dropdown-divider"></div>
-						<a class="dropdown-item" href="#">Algo mais aqui</a>
-					</div></li>
-				<li class="nav-item"><a class="nav-link disabled" href="#">Desativado</a>
-				</li>
-			</ul>
-			<form class="form-inline my-2 my-lg-0">
-				<input class="form-control mr-sm-2" type="search"
-					placeholder="Pesquisar" aria-label="Pesquisar">
-				<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Pesquisar</button>
-			</form>
-		</div>
-	</nav>
-
-
-	<div id="carouselExampleControls" class="carousel slide"
-		data-ride="carousel">
-		<div class="carousel-inner">
-			<div class="carousel-item active">
-				<img class="d-block w-100"
-					src=".../800x400?auto=yes&bg=777&fg=555&text=Primeiro Slide"
-					alt="Primeiro Slide">
-			</div>
-			<div class="carousel-item">
-				<img class="d-block w-100"
-					src=".../800x400?auto=yes&bg=666&fg=444&text=Segundo Slide"
-					alt="Segundo Slide">
-			</div>
-			<div class="carousel-item">
-				<img class="d-block w-100"
-					src=".../800x400?auto=yes&bg=555&fg=333&text=Terceiro Slide"
-					alt="Terceiro Slide">
-			</div>
-		</div>
-		<a class="carousel-control-prev" href="#carouselExampleControls"
-			role="button" data-slide="prev"> <span
-			class="carousel-control-prev-icon" aria-hidden="true"></span> <span
-			class="sr-only">Anterior</span>
-		</a> <a class="carousel-control-next" href="#carouselExampleControls"
-			role="button" data-slide="next"> <span
-			class="carousel-control-next-icon" aria-hidden="true"></span> <span
-			class="sr-only">Próximo</span>
-		</a>
-	</div>
-
-	<h1>INSERIDO COM SUCESSO!!</h1>
-	<label>Nome: </label>
-	<div th:text="${publicador.nome}"></div>
-	<label>Numero De Publicações: </label>
-	<div th:text="${publicador.nPublicacoes}"></div>
-	<label>Stauts: </label>
-	<div th:text="${publicador.Status}"></div>
-
+	<h1>OI EU SOU GOKU!</h1>
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
 		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
 		crossorigin="anonymous"></script>
