--- a/src/main/resources/templates/cadastro/cadastroPublicador.html
+++ b/src/main/resources/templates/cadastro/cadastroPublicador.html
@@ -11,6 +11,7 @@
 <link rel="stylesheet"
 	href="https://use.fontawesome.com/releases/v5.0.8/css/all.css">
 <link rel="stylesheet" th:href="@{/css/cadastro.css}" />
+<link rel="stylesheet" th:href="@{/css/nav.css}" />
 </head>
 <body>
 	<header th:replace="fragments/header :: cabecalho"></header>
