--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -2,12 +2,11 @@
 	xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="utf-8">
-
 </head>
 <body>
 	<header th:fragment="cabecalho">
 		<nav class="navbar navbar-expand-lg navbar-light" style="background: #FFF819;">
-			<a class="navbar-brand" href="#">Navbar</a>
+			<a class="navbar-brand" href="#"><img alt="logo" width="60px" height="52px"  th:src="@{/images/logo.png}"></a>
 			<button class="navbar-toggler" id="btn1" type="button" data-toggle="collapse"
 				data-target="#conteudoNavbarSuportado"
 				aria-controls="conteudoNavbarSuportado" aria-expanded="false"
@@ -17,19 +16,19 @@
 
 			<div class="collapse navbar-collapse" id="conteudoNavbarSuportado">
 				<ul class="navbar-nav mr-auto">
-					<li class="nav-item active"><a class="nav-link" href="#">Home
+					<li class="nav-item active" ><a class="nav-link" href="#" style="color: #000000; text-shadow: gray;">Home
 							<span class="sr-only">(página atual)</span>
 					</a></li>
-					<li class="nav-item"><a class="nav-link" href="#">Link</a></li>
+					<li class="nav-item"><a class="nav-link" href="#" style="color: #000000; text-shadow: gray;">Link</a></li>
 					<li class="nav-item dropdown"><a
 						class="nav-link dropdown-toggle" href="#" id="navbarDropdown"
 						role="button" data-toggle="dropdown" aria-haspopup="true"
-						aria-expanded="false"> Dropdown </a>
+						aria-expanded="false" style="color: #000000; text-shadow: gray;"> Publicações </a>
 						<div class="dropdown-menu" aria-labelledby="navbarDropdown" style="background-color: #000000;">
-							<a class="dropdown-item menu1" href="#" style="color: #FFF819;">Ação</a> 
-							<a class="dropdown-item menu1" href="#" style="color: #FFF819;">Outra ação</a>
+							<a class="dropdown-item menu1" href="#" style="color: #FFF819;">Programação</a> 
+							<a class="dropdown-item menu1" href="#" style="color: #FFF819;">Banco de dados</a>
 							<div class="dropdown-divider"></div>
-							<a class="dropdown-item menu1" href="#" style="color: #FFF819;">Algo mais aqui</a>
+							<a class="dropdown-item menu1" href="#" style="color: #FFF819;">Engenharia de software</a>
 						</div></li>
 					</li>
 				</ul>
@@ -43,7 +42,7 @@
 						class="nav-link dropdown-toggle" href="#" id="navbarDropdown"
 						role="button" data-toggle="dropdown" aria-haspopup="true"
 						aria-expanded="false"><i class="fa fa-user-circle"
-							aria-hidden="true"></i></a>
+							aria-hidden="true" style="color: #000000; text-shadow: gray;"></i></a>
 						<div class="dropdown-menu dropdown-menu-right" 
 							aria-labelledby="navbarDropdown" style="background-color: #000000;">
 							<a class="dropdown-item menu1" th:href="@{/acesso/login}" href="#" style="color: #FFF819;">Logar</a>
