--- a/src/main/resources/static/css/telaPrincipal.css
+++ b/src/main/resources/static/css/telaPrincipal.css
@@ -1,3 +1,6 @@
+/*
+    DEMO STYLE
+*/
 
 @import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";
 body {
@@ -48,6 +51,10 @@ span {
     display: inline-block;
 }
 
+/* ---------------------------------------------------
+    SIDEBAR STYLE
+----------------------------------------------------- */
+
 .wrapper {
     display: flex;
     align-items: stretch;
@@ -62,8 +69,8 @@ span {
 }
 
 #sidebar.active {
-    min-width: 80px;
-    max-width: 80px;
+    min-width: 90px;
+    max-width: 90px;
     text-align: center;
 }
 
@@ -107,7 +114,7 @@ span {
 }
 
 #sidebar .sidebar-header {
-    padding: 20px;
+    padding: 10px;
     background: #6d7fcc;
 }
 
@@ -184,7 +191,7 @@ a.article:hover {
 }
 
 /* ---------------------------------------------------
-    ESTILO DO CONTEÚDO
+    CONTENT STYLE
 ----------------------------------------------------- */
 
 #content {
@@ -195,7 +202,7 @@ a.article:hover {
 }
 
 /* ---------------------------------------------------
-    @MEDIA
+    MEDIAQUERIES
 ----------------------------------------------------- */
 
 @media (max-width: 768px) {
