--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -19,11 +19,10 @@
 					<li class="nav-item active" ><a class="nav-link" href="#" style="color: #000000; text-shadow: gray;">Home
 							<span class="sr-only">(página atual)</span>
 					</a></li>
-					<li class="nav-item"><a class="nav-link" href="#" style="color: #000000; text-shadow: gray;">Link</a></li>
 					<li class="nav-item dropdown"><a
 						class="nav-link dropdown-toggle" href="#" id="navbarDropdown"
 						role="button" data-toggle="dropdown" aria-haspopup="true"
-						aria-expanded="false" style="color: #000000; text-shadow: gray;"> Publicações </a>
+						aria-expanded="false" style="color: #000000; text-shadow: gray;"> Conteúdos </a>
 						<div class="dropdown-menu" aria-labelledby="navbarDropdown" style="background-color: #000000;">
 							<a class="dropdown-item menu1" href="#" style="color: #FFF819;">Programação</a> 
 							<a class="dropdown-item menu1" href="#" style="color: #FFF819;">Banco de dados</a>
@@ -31,6 +30,7 @@
 							<a class="dropdown-item menu1" href="#" style="color: #FFF819;">Engenharia de software</a>
 						</div></li>
 					</li>
+					<li class="nav-item"><a class="nav-link" th:href="@{/inscrito/cadastro}" href="#" style="color: #000000; text-shadow: gray;">Cadastre-se!</a></li>
 				</ul>
 				<form class="form-inline my-2 my-lg-0">
 					<input class="form-control mr-sm-2" type="search"
