--- a/src/main/resources/templates/inscrito/telaInscrito.html
+++ b/src/main/resources/templates/inscrito/telaInscrito.html
@@ -7,14 +7,14 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-<title>Acesso Inscrito
-</title>
+<title>Acesso Inscrito</title>
 <link rel="stylesheet"
 	href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css"
 	integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4"
 	crossorigin="anonymous">
 <link rel="stylesheet" th:href="@{/css/telaPrincipal.css}">
-
+<link rel="stylesheet"
+	href="https://use.fontawesome.com/releases/v5.0.8/css/all.css">
 <script defer
 	src="https://use.fontawesome.com/releases/v5.0.13/js/solid.js"
 	integrity="sha384-tzzSw1/Vo+0N5UhStP3bvwWPq+uvzCMfrN1fEFe+xBmv1C/AtVX5K0uZtmcHitFZ"
@@ -29,81 +29,19 @@
 <body>
 
 	<div class="wrapper">
-		<!-- Sidebar  -->
-		<nav id="sidebar">
-			<div class="sidebar-header">
-				<h3>Bootstrap Sidebar</h3>
-				<strong>BS</strong>
-			</div>
-
-			<ul class="list-unstyled components">
-				<li class="active"><a href="#homeSubmenu"
-					data-toggle="collapse" aria-expanded="false"
-					class="dropdown-toggle"> <i class="fas fa-home"></i> Home
-				</a>
-					<ul class="collapse list-unstyled" id="homeSubmenu">
-						<li><a href="#">Home 1</a></li>
-						<li><a href="#">Home 2</a></li>
-						<li><a href="#">Home 3</a></li>
-					</ul></li>
-				<li><a href="#"> <i class="fas fa-briefcase"></i> About
-				</a> <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false"
-					class="dropdown-toggle"> <i class="fas fa-copy"></i> Pages
-				</a>
-					<ul class="collapse list-unstyled" id="pageSubmenu">
-						<li><a href="#">Page 1</a></li>
-						<li><a href="#">Page 2</a></li>
-						<li><a href="#">Page 3</a></li>
-					</ul></li>
-				<li><a href="#"> <i class="fas fa-image"></i> Portfolio
-				</a></li>
-				<li><a href="#"> <i class="fas fa-question"></i> FAQ
-				</a></li>
-				<li><a href="#"> <i class="fas fa-paper-plane"></i> Contact
-				</a></li>
-			</ul>
-
-			<ul class="list-unstyled CTAs">
-				<li><a
-					href="https://bootstrapious.com/tutorial/files/sidebar.zip"
-					class="download">Download source</a></li>
-				<li><a href="https://bootstrapious.com/p/bootstrap-sidebar"
-					class="article">Back to article</a></li>
-			</ul>
-		</nav>
+		<!-- Sidebar Inscrito  -->
+		<nav th:replace="fragments/slidebarInscrito :: slidebarInscrito"></nav>
 
 		<!-- Page Content  -->
 		<div id="content">
-
-			<nav class="navbar navbar-expand-lg navbar-light bg-light">
-				<div class="container-fluid">
-
-					<button type="button" id="sidebarCollapse" class="btn btn-info">
-						<i class="fas fa-align-left"></i> <span>Toggle Sidebar</span>
-					</button>
-					<button class="btn btn-dark d-inline-block d-lg-none ml-auto"
-						type="button" data-toggle="collapse"
-						data-target="#navbarSupportedContent"
-						aria-controls="navbarSupportedContent" aria-expanded="false"
-						aria-label="Toggle navigation">
-						<i class="fas fa-align-justify"></i>
-					</button>
-
-					<div class="collapse navbar-collapse" id="navbarSupportedContent">
-						<ul class="nav navbar-nav ml-auto">
-							<li class="nav-item active"><a class="nav-link" href="#">Page</a>
-							</li>
-							<li class="nav-item"><a class="nav-link" href="#">Page</a></li>
-							<li class="nav-item"><a class="nav-link" href="#">Page</a></li>
-							<li class="nav-item"><a class="nav-link" href="#">Page</a></li>
-						</ul>
-					</div>
-				</div>
-			</nav>
-
+			<nav th:replace="fragments/topbarInscrito :: topbarInscrito"></nav>
+			
+			<div class="conteudo"><h1>OI EU SOU GOKU</h1></div>
 
 		</div>
 	</div>
+	
+	
 
 	<!-- jQuery CDN - Slim version (=without AJAX) -->
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
