--- a/src/main/resources/templates/fragments/topbarInscrito.html
+++ b/src/main/resources/templates/fragments/topbarInscrito.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="utf-8">
 <title>Top-Bar Inscrito</title>
@@ -21,11 +22,9 @@
 
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="nav navbar-nav ml-auto">
-					<li class="nav-item active"><a class="nav-link" href="#">Page</a>
-					</li>
-					<li class="nav-item"><a class="nav-link" href="#">Page</a></li>
-					<li class="nav-item"><a class="nav-link" href="#">Page</a></li>
-					<li class="nav-item"><a class="nav-link" href="#">Page</a></li>
+					<li class="nav-item"><a class="nav-link" href="#" th:href="@{/home}"><i class="fas fa-user-friends"></i> Quem somos</i></a></li>
+					<li class="nav-item"><a class="nav-link" href="#"><i class="fas fa-paper-plane"></i> Contato</a></li>
+					<li class="nav-item"><a class="nav-link" href="#"><i class="fas fa-home"></i> Home</i></a></li>
 				</ul>
 			</div>
 		</div>
