--- a/src/main/resources/templates/inscrito/telaInscrito.html
+++ b/src/main/resources/templates/inscrito/telaInscrito.html
@@ -36,7 +36,10 @@
 		<div id="content">
 			<nav th:replace="fragments/topbarInscrito :: topbarInscrito"></nav>
 			
-			<div class="conteudo"><h1>OI EU SOU GOKU</h1></div>
+			<div class="conteudo">
+				<h1>Bem vindo caro sofredor!</h1>
+				<img alt="programador.png" th:src="@{/images/programmer.png}" height="233" width="200">
+			</div>
 
 		</div>
 	</div>
