--- a/src/main/resources/templates/admin/telaAdmin.html
+++ b/src/main/resources/templates/admin/telaAdmin.html
@@ -14,6 +14,9 @@
 	crossorigin="anonymous">
 <link rel="stylesheet" th:href="@{/css/telaPrincipal.css}">
 
+<link rel="stylesheet"
+	href="https://use.fontawesome.com/releases/v5.0.8/css/all.css">
+
 <script defer
 	src="https://use.fontawesome.com/releases/v5.0.13/js/solid.js"
 	integrity="sha384-tzzSw1/Vo+0N5UhStP3bvwWPq+uvzCMfrN1fEFe+xBmv1C/AtVX5K0uZtmcHitFZ"
@@ -54,11 +57,12 @@
 						<li><a href="#">Page 2</a></li>
 						<li><a href="#">Page 3</a></li>
 					</ul></li>
-				<li><a href="#"> <i class="fas fa-image"></i> Portfolio
+				<li><a href="#"> <i class="fa fa-plus-circle" aria-hidden="true"></i> Criar Tema
 				</a></li>
-				<li><a href="#"> <i class="fas fa-question"></i> FAQ
+				<li><a th:href="@{/admin/cadastroPublicador}"> <i class="fa fa-users" aria-hidden="true"></i> Cadastrar Publicador
 				</a></li>
-				<li><a href="#"> <i class="fas fa-paper-plane"></i> Contact
+				<li><a th:href="@{/relatorio/telaPrincipal}"> <i class="fa fa-book" aria-hidden="true"></i>
+				   Acesso aos Relatórios
 				</a></li>
 			</ul>
 
