--- a/src/main/resources/templates/fragments/slidebarInscrito.html
+++ b/src/main/resources/templates/fragments/slidebarInscrito.html
@@ -18,7 +18,10 @@
 			</a></li>
 			<li><a href="#" th:href="@{/inscrito/inscritoEditar}"> <i class="fas fa-edit"></i> Editar
 			</a></li>
-			<li class="active"><a href="#homeSubmenu" data-toggle="collapse"
+			<li><a href="#" th:href="@{/inscrito/alterarSenha}"><i class="fas fa-unlock-alt"></i></i> Alterar Senha
+			</a></li>
+
+			<li class="active"><a href=	"#homeSubmenu" data-toggle="collapse"
 				aria-expanded="false" class="dropdown-toggle"> <i
 					class="fas fa-copy"></i> Conteúdo
 			</a>
@@ -28,7 +31,7 @@
 					<li><a href="#" th:href="@{/}">Engenharia de software</a></li>
 				</ul></li>
 			<li>
-			<li><a href="#" th:href="@{/inscrito/}"> <i class="fa fa-heart"></i> Temas
+			<li><a href="#" th:href="@{/inscrito/inscritoTema}"> <i class="fa fa-heart"></i> Temas
 			</a></li>
 		</ul>
 	</nav>
