--- a/src/main/resources/templates/fragments/topbarInscrito.html
+++ b/src/main/resources/templates/fragments/topbarInscrito.html
@@ -10,7 +10,7 @@
 		<div class="container-fluid">
 
 			<button type="button" id="sidebarCollapse" class="btn btn-info">
-				<i class="fas fa-align-left"></i> <span>Abrir menu lateral</span>
+				<i class="fas fa-align-left"></i> <span>Menu lateral</span>
 			</button>
 			<button class="btn btn-dark d-inline-block d-lg-none ml-auto"
 				type="button" data-toggle="collapse"
@@ -22,9 +22,9 @@
 
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="nav navbar-nav ml-auto">
-					<li class="nav-item"><a class="nav-link" href="#" th:href="@{/home}"><i class="fas fa-user-friends"></i> Quem somos</i></a></li>
+					<li class="nav-item"><a class="nav-link" href="#"><i class="fas fa-user-friends"></i> Quem somos</i></a></li>
 					<li class="nav-item"><a class="nav-link" href="#"><i class="fas fa-paper-plane"></i> Contato</a></li>
-					<li class="nav-item"><a class="nav-link" href="#"><i class="fas fa-home"></i> Home</i></a></li>
+					<li class="nav-item"><a class="nav-link" href="#" th:href="@{/home}"><i class="fas fa-home"></i> Home</i></a></li>
 				</ul>
 			</div>
 		</div>
