--- a/src/main/resources/templates/inscrito/inscritoEditar.html
+++ b/src/main/resources/templates/inscrito/inscritoEditar.html
@@ -37,13 +37,13 @@
 			<nav th:replace="fragments/topbarInscrito :: topbarInscrito"></nav>
 
 			<div class="conteudo">
-				<div class="container" >
-					<form th:object="${inscrito}" th:action="@{/inscrito/inscritoEditar}" method="post">
+				<div class="container">
+					<form th:object="${inscrito}"
+						th:action="@{/inscrito/inscritoEditar}" method="post">
 						<div class="form-group">
-							<label for="exampleInputPassword1"></label> <input
-								type="text" class="form-control habilitaveis"
-								id="exampleInputPassword1" th:field="*{id}" 
-								readonly="readonly" hidden>
+							<label for="exampleInputPassword1"></label> <input type="text"
+								class="form-control habilitaveis" id="exampleInputPassword1"
+								th:field="*{id}" readonly="readonly" hidden>
 						</div>
 						<div class="form-group">
 							<label for="exampleInputPassword1">Nome completo</label> <input
@@ -53,27 +53,25 @@
 						</div>
 						<div class="form-group">
 							<label for="exampleInputPassword1">Endereço de email</label> <input
-								type="text" class="form-control"
-								id="exampleInputPassword1" placeholder="Email"
-								th:field="*{email}" readonly="readonly">
+								type="text" class="form-control" id="exampleInputPassword1"
+								placeholder="Email" th:field="*{email}" disabled>
 						</div>
 						<div class="form-group">
 							<label for="exampleInputPassword1">Sexo</label> <input
-								type="text" class="form-control"
-								id="exampleInputPassword1" placeholder="Email"
-								th:field="*{sexo}" readonly="readonly">
+								type="text" class="form-control" id="exampleInputPassword1"
+								placeholder="Email" th:field="*{sexo}" disabled>
 						</div>
-						
+
 						<div class="form-group">
 							<label for="exampleInputPassword1">Data de nascimento</label> <input
 								type="date" class="form-control habilitaveis"
-								id="exampleInputPassword1" th:field="*{datanasc}" readonly="readonly">
+								id="exampleInputPassword1" th:field="*{datanasc}"
+								readonly="readonly">
 						</div>
 						<div class="form-group">
-							<label for="exampleInputPassword1">CPF</label> <input
-								type="text" class="form-control"
-								id="exampleInputPassword1" placeholder="CPF"
-								th:field="*{cpf}" readonly="readonly">
+							<label for="exampleInputPassword1">CPF</label> <input type="text"
+								class="form-control" id="exampleInputPassword1"
+								placeholder="CPF" th:field="*{cpf}" disabled>
 						</div>
 						<div class="form-group">
 							<label for="exampleInputPassword1">Nickname</label> <input
@@ -81,8 +79,11 @@
 								id="exampleInputPassword1" placeholder="Nickname"
 								th:field="*{nickname}" readonly="readonly">
 						</div>
-						<button type="button" class="btn btn-default" onclick="editavelOuNao()">Editar</button>
-						<button type="submit" class="btn btn-default" onclick="naoEditavel()">Salvar</button>
+						<div th:replace="fragments/alert :: alert"></div>
+						<button type="button" class="btn btn-default"
+							onclick="editavelOuNao()">Editar</button>
+						<button type="submit" class="btn btn-default"
+							onclick="naoEditavel()">Salvar</button>
 					</form>
 				</div>
 			</div>
@@ -113,18 +114,19 @@
 				$('#sidebar').toggleClass('active');
 			});
 		});
-		
-		function naoEditavel(){
+
+		function naoEditavel() {
 			var elements = document.getElementsByClassName("habilitaveis");
-			for(let i=0;i<elements.length;i++){ 
-				elements[i].readOnly = false; 
+			for (let i = 0; i < elements.length; i++) {
+				elements[i].readOnly = false;
 			}
 		}
 
-		function editavelOuNao(){
+		function editavelOuNao() {
 			var elements = document.getElementsByClassName("habilitaveis");
-			for(let i=0;i<elements.length;i++){ 
-				elements[i].readOnly = elements[i].readOnly === true? false:true; 
+			for (let i = 0; i < elements.length; i++) {
+				elements[i].readOnly = elements[i].readOnly === true ? false
+						: true;
 			}
 		}
 	</script>
